--- a/linking.html
+++ b/linking.html
@@ -5,7 +5,7 @@
     <!-- page content -->
     <div style="text-align:right; font-size:18px; width:95%; margin-top:1%"><a href="https://stackfame.com/editable-html-table-using-javascript-jquery/" >Tutorial  | <a href="https://stackfame.com/">StackFAME Homepage</a></div>
  <br>
-    <h1 class="col-md-12 text-center" style="color: black">Dynamic Editable HTML Table using Javascript, Jquery and Bootstrap with add, edit, and Delete Options</h1>
+    <h1 class="col-md-12 text-center" style="color: black">Memory Linking for Add, Edit & Delete</h1>
    
     
     <br>
@@ -15,13 +15,16 @@
 	<thead>
 		<tr>
 			<th class="text-center">
-				Full Name
+				Memory Linking No
 			</th>
 			<th class="text-center">
-				WebSite
+				Item 1
 			</th>
 			<th class="text-center">
-				Contact No
+				Item 2
+			</th>
+			<th class="text-center">
+				Association Story
 			</th>
 			<th class="text-center">
 				<button id="addNewRow" class="btn btn-primary btn-sm">Add New Row</button>
@@ -39,6 +42,9 @@
 			<td>
 				9876543210
 			</td>
+			<td>
+				9876543210
+			</td>
 		</tr>
 		<tr>
 			<td>
@@ -48,7 +54,10 @@
 				https://araiana-smith.com
 			</td>
 			<td>
-				1234567890
+				9876543210
+			</td>
+			<td>
+				9876543210
 			</td>
 		</tr>
 		<tr>
@@ -61,6 +70,9 @@
 			<td>
 				988889888
 			</td>
+			<td>
+				9876543210
+			</td>
 		</tr>
 		<tr>
 			<td>
@@ -71,6 +83,9 @@
 			</td>
 			<td>
 				9797979797
+			</td>
+			<td>
+				9876543210
 			</td>
 		</tr>
 	</tbody>
