--- a/linking.html
+++ b/linking.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- page content -->
-    <div style="text-align:right; font-size:18px; width:95%; margin-top:1%"><a href="https://stackfame.com/editable-html-table-using-javascript-jquery/" >Tutorial  | <a href="https://stackfame.com/">StackFAME Homepage</a></div>
+    <div style="text-align:right; font-size:18px; width:95%; margin-top:1%"><a href="" >JeMyMemory  | <a href="">Back to Main</a></div>
  <br>
     <h1 class="col-md-12 text-center" style="color: black">Memory Linking for Add, Edit & Delete</h1>
    
