--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>BeMyMomory - Web Tools For Utilizing Memory Skills</h1>
 <p>Memory linking is a mnemonic technique used in psychology to improve memory recall. It is also called the link method. It involves creating a mental connection or association between items or pieces of information in a sequence or list.
 Memory Linking (Link Method): Definition Written by Viktoriya Sus (MA) MA) | August 31, 2023 and Reviewed by Chris Drew (PhD)</p>
-<a href="memorylinking.html">Memory Linkingt</a>
+<a href="TableXML.html">Memory Linkingt</a>
 
 </body>
 </html>
